# Playmaker

./: main.py  package.json  pyproject.toml
.claude/: settings.local.json
.claude/agents/: playwright-test-judge.md
.claude/workflows/: playmaker-docs-check.yml  playmaker-plan.yml
playmaker/: __init__.py  sdk_planner.py
src/: docs-checker.ts  generator.ts  planner.ts
src/utils/: query-tracker.ts
