[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "playmaker"
version = "0.1.0"
description = "Create Playwright test plans using Claude Agent SDK + Playwright MCP"
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk>=0.1.0",
]

[tool.setuptools]
packages = ["playmaker"]
